--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,12 @@
-#spring.application.name=spring-cloud-eureka
-#
-#server.port=8002
-#eureka.client.register-with-eureka=false
-#eureka.client.fetch-registry=false
-#
-#eureka.client.service-url.defaultZone=http://localhost:${server.port}/eureka/
+spring.application.name=spring-cloud-eureka
+
+server.port=8000
+eureka.client.register-with-eureka=false
+eureka.client.fetch-registry=false
+
+eureka.client.service-url.defaultZone=http://localhost:8000/eureka/
+
+spring.cloud.config.server.git.uri=https://github.com/Radicalpro/spring-cloud-eureka/
+spring.cloud.config.server.git.search-paths=config-repo
+spring.cloud.config.server.git.username=
+spring.cloud.config.server.git.password=
